# benxi

./: .dockerignore  .env.server.deps.example  .env.server.shared.example  .env.stack.example  .gitignore  404.html  Dockerfile  FAQ.html  MEMORY.md  README.md  RELEASE.md  compose.dev.yaml  compose.expose-deps.db.yaml  compose.expose-deps.gateway.yaml  compose.expose-deps.yaml  compose.gateway.yaml  compose.local-db.yaml  compose.mirror.yaml  compose.network.yaml  compose.server.yaml  compose.yaml  dev.sh  getting-started.html  index.html  mkdocs.yml  my-agent-philosophy.md  pyproject.toml  pyrightconfig.json  recover_minio.py  start-local.sh  supported_languages.html  运维部署指南.md
backend/: .env.example  .env.remote.example  Dockerfile  README.md  deploy.target  deploy.target.example  knowflow.env.example  pyproject.toml  tunnel.target  tunnel.target.example
backend/app/: __init__.py  bootstrap.py  config.py  database.py  db_bootstrap.py  main.py  schema_migrate.py
backend/logs/: tmp4dwjbht0.pdf_20260709_165542.json  tmp9fi3dxcu.pdf_20260703_151136.json  tmpr92vi6qb.pdf_20260702_171502.json
backend/scripts/: bootstrap_tool_md.py  collect_finance_factsheet.py  migrate_pg_to_neo4j.py  purge_all_documents.py  purge_orphan_knowflow_kb.py  repair_document_dept_ids.py  sync_resource_settings_from_env.py
backend/test_support/: document_upload.py
backend/tests/: conftest.py  run_diagnostic.py  test_admin_personal_documents.py  test_agent_chat_stream_delta.py  test_agent_chat_stream_errors.py  test_agent_chat_workflow.py  test_agent_checkpoint.py  test_agent_config.py  test_agent_context_subagent.py  test_agent_document_tools.py  test_agent_execution_closure.py  test_agent_memory_service.py  test_agent_orchestrator.py  test_agent_orchestrator_assist.py  test_agent_plan_cache_service.py  test_agent_planner.py  test_agent_platform_tools.py  test_agent_profiles.py  test_agent_reply_synth.py  test_agent_resident.py  test_agent_routing_catalog.py  test_agent_routing_signals.py  test_agent_runtime.py  test_agent_skill_auto_inject.py  test_agent_skill_bootstrap.py  test_agent_skill_explore_context.py  test_agent_skill_match.py  test_agent_skill_repair_context.py  test_agent_skill_router.py  test_agent_skill_router_signals.py  test_agent_skill_routing.py  test_agent_specialist_prompt.py  test_agent_supervisor.py  test_agent_task_flow.py  test_agent_tool_args.py  test_agent_tool_context.py  test_agent_tool_dedup.py  test_agent_tool_search.py  test_agent_tools_workflow.py  test_ai_chat.py  (+114 more)
platform/: .env.amd64.example  .env.deploy.example  .env.example  .env.remote.example  .gitignore  CONFIG.md  Dockerfile  README.md  deploy.target.amd64  deploy.target.example  deploy.target.local  doc-compare-product-design.html  docker-compose.knowflow.amd64.yml  docker-compose.knowflow.mirror.yml  docker-compose.knowflow.yml  docker-compose.local.yml  docker-compose.mirror.yml  docker-compose.prod.arm64.yml  docker-compose.prod.yml  docker-compose.speech.prod.yml  docker-compose.speech.yml  docker-compose.yml  feature-plugins.html  frp.target.example  knowflow.env  knowflow.env.amd64.example  knowflow.env.example  permission-model.html  pyproject.toml  speech-models.html  tunnel.target.example
platform/app/: __init__.py  bootstrap.py  config.py  database.py  db_bootstrap.py  main.py  schema_migrate.py
platform/knowflow-theme/: patch-index-html.sh  platform-branding.css  platform-branding.js
platform/nginx/: embed-proxy.conf
platform/scripts/: db_migrate.py  reconcile_knowledge_data.py  repair_document_dept_ids.py  repair_ragflow_kb_acl.py  repair_ragflow_users.py  stress_test_throughput.py  sync_ccer_history.py  sync_resource_settings_from_env.py
platform/speech-service/: Dockerfile  requirements.txt
platform/test_support/: __init__.py
platform/tests/: conftest.py  test_admin_personal_documents.py  test_agent_admin_reply.py  test_agent_chat_stream_errors.py  test_agent_config.py  test_agent_document_tools.py  test_agent_execution_closure.py  (+173 more)
(+1741 files in other folders)
