[project]
name = "doc-platform"
version = "2.0.0"
description = "Single-tenant document platform (IAM, documents, jobs, notifications)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.3.0",
    "pycryptodomex>=3.21.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "psutil>=6.0.0",
]

[project.scripts]
doc-platform = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]
